<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightPurple"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".EnglishActivity"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/welcome"
                android:textColor="@color/superDarkPurple"
                android:textSize="40sp" />
            <View
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/superDarkPurple"/>

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/it_empowers" />
        </LinearLayout>
        <Button
            android:id="@+id/but1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_link"
            style="@style/Button"
            />
        <Button
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            style="@style/Button"
            />
        <Button
            android:id="@+id/edu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educational_videos"
            style="@style/Button"
            />
    </LinearLayout>
</ScrollView>

